# model_infer

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  readme.md
.github/: copilot-instructions.md
.github/prompts/: implementation-plan.md  lua-intf-analysis.md  tensor-redesign-plan.md
docs/architecture/: 00-index.md  01-system-overview.md  02-core-modules.md  03-data-flow.md  04-memory-management.md  05-lua-integration.md  06-build-system.md  07-testing-framework.md  08-performance.md  09-configuration.md
docs/architecture_future/: 00-index.md  01-core-abstractions.md  02-multi-model-scenarios.md  03-execution-modes.md  04-pipeline-design.md  05-resource-management.md  06-lua-script-structure.md  07.1-example-pedestrian.md  07.2-example-segmentation.md  07.3-example-face.md  08-architecture-summary.md
scripts/: benchmark_yolo.sh  test_tensor.lua  test_tensor_api.lua  yolo11_classifier.lua  yolo11_detector.lua  yolo11_pose.lua  yolo11_seg.lua  yolo11_tensor_benchmark.lua  yolo11_tensor_detector.lua  yolo11_tensor_pose.lua  yolo11_tensor_seg.lua  yolov5_detector.lua  yolov5_tensor_benchmark.lua  yolov5_tensor_detector.lua
scripts/lib/: benchmark.lua  coco.lua  preprocess.lua
src/: cpp_main.cpp  main.cpp  main_util.h  test_main.cpp
src/bindings/: register_modules.cpp
src/inference/: inference.cpp  inference.h
src/modules/: lua_cv.cpp  lua_cv.h  lua_nn.cpp  lua_nn.h  lua_utils.cpp  lua_utils.h
src/modules/tensor/: cpu_memory.cpp  cpu_memory.h  cpu_storage.cpp  cpu_storage.h  device_buffer.cpp  device_buffer.h  device_type.h  stream.cpp  stream.h  sync_handle.cpp  sync_handle.h  tensor.cpp  tensor.h  tensor_activation.cpp  tensor_advanced.cpp  tensor_compare.cpp  tensor_core.cpp  tensor_device.cpp  tensor_legacy.cpp  tensor_math.cpp  tensor_reduction.cpp  tensor_select.cpp  tensor_shape.cpp  tensor_storage.cpp  tensor_storage.h
tests/: run_all_tests.lua  test_activation.lua  test_advanced.lua  test_basic.lua  test_chain.lua  test_comparison.lua  test_contiguous.lua  test_edge_cases.lua  test_gather_concat.lua  test_helpers.lua  test_inplace.lua  test_noncontiguous.lua  test_reduction.lua  test_scalar_ops.lua  test_shape.lua  test_tensor_ops.lua
